--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         </activity>
 
         <activity android:name=".Sample" />
+        <activity android:name=".SampleLoop" />
 
     </application>
 
